--- a/firstapp/src/components/pages/Home.css
+++ b/firstapp/src/components/pages/Home.css
@@ -1,12 +1,22 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+ 
 .productSection{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    background: red;
+    background-color: aqua;
+    padding: 50px 0px;
 }
 
+.productSection h2{
+    text-align: center;
+}
+ 
+.productSection{
+    max-width: 1170px;
+    margin: auto;
+    gap: 20px;
+    grid-template-columns: repeat(4,1fr);
+    margin-top: 30px;
+}
+.productSection img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
