--- a/firstapp/src/components/pages/Home.css
+++ b/firstapp/src/components/pages/Home.css
@@ -20,3 +20,15 @@
     height: 100%;
     object-fit: cover;
 }
+
+.productItems{
+    border: 1px solid #ddd; 
+}
+.productItems img{
+    width: 100%;
+    height: 100%; 
+}
+
+.productItems h3{
+    text-align: center;
+}
